# Inconsistent-trust-MPC

./: README.md
deployment/: VM_deploy.py  config.json  config_template.json  configs.py  data_analysis.py  types.h  utils.py
deployment/drawers/: draw_fixed_not_trust.py  draw_n_client.py  draw_n_trust.py  draw_param_len.py
deployment/logs/test_1103/results/: fixed_not_trust.json  n_client_prot.json  n_client_secagg.json  n_trust.json  param_len_prot.json  param_len_secagg.json
deployment/template_AMD/: parameters.json  template.json
deployment/template_SGX/: parameters.json  template.json
deployment/template_VM/: parameters.json  template.json
protocol/prot_mpc/: CMakeLists.txt  config.json  config_template.json  local_test.py  privkeys  pubkeys  setup
protocol/prot_mpc/amd_server/: CMakeLists.txt  server.cpp
protocol/prot_mpc/common/: CMakeLists.txt  CMakeLists_static.txt  check.h  config.h  constant.h  crypto_constant.h  key_gen.cpp  key_gen_static.cpp  network.h
protocol/prot_mpc/common/evidence/: evidence_common.h  evidence_generator.cpp  evidence_generator.h  evidence_verifier.cpp  evidence_verifier.h  trace.h
protocol/prot_mpc/common/secagg/: client.hpp  common.h  interpolation.hpp  log.cpp  log.h  parameter.hpp  polynomial.hpp  server.hpp  tests.cpp  types.h  zp.hpp
protocol/prot_mpc/prot_mpc_client/: CMakeLists.txt  prot_mpc_client.cpp
protocol/prot_mpc/sgx_server/: CMakeLists.txt  private.pem  prog_bc.edl  prog_mpc.edl  public.pem
protocol/prot_mpc/sgx_server/host/: CMakeLists.txt  host.cpp
protocol/prot_mpc/sgx_server/prog_bc/: CMakeLists.txt  ecalls.cpp  prog_bc.conf  prog_bc.cpp  prog_bc.h
protocol/prot_mpc/sgx_server/prog_mpc/: CMakeLists.txt  ecalls.cpp  prog_mpc.conf  prog_mpc.cpp  prog_mpc.h
